demo-booklore/middleware-stripprefix-oauth-start.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-oauth-start
  namespace: demo-booklore
spec:
  stripPrefix:
    prefixes:
      - /oauth2/start
