demo-booklore/ingressroute-demo-booklore.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-booklore.${dns_domain}
  namespace: demo-booklore
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo-booklore.${dns_domain}`)
      kind: Rule
      services:
        - name: demo-booklore
          kind: Service
          port: 6060
      middlewares:  
        - name: demo-accept
    - match: Host(`demo-booklore.${dns_domain}`) && PathPrefix(`/oauth2/start`)
      kind: Rule
      services:
        - name: nginx
          kind: Service
          port: 8080
      middlewares:
        - name: stripprefix-oauth-start
